<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunActivity" >
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/started" />
        <TextView
            android:id="@+id/textView_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude" />
        <TextView
            android:id="@+id/textView_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude" />
        <TextView
            android:id="@+id/textView_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude" />
        <TextView
            android:id="@+id/textView_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elapsed_time" />
        <TextView
            android:id="@+id/textView_elapsed_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button 
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />
        <Button 
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop" />
    </LinearLayout>

</TableLayout>
